--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.2",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "13.4.0",
     "react": "18",
     "react-dom": "18",
