--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "cypress run"
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
@@ -25,6 +26,7 @@
     "@types/react": "18",
     "@types/react-dom": "18",
     "autoprefixer": "10",
+    "cypress": "^13.13.1",
     "eslint": "8",
     "eslint-config-next": "13.5.4",
     "postcss": "8",
